added time of day

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="index.html" class="active">Home</a>
             <a href="https://tanicha.github.io/stylin-with-css/" target="_blank">Stylin' with CSS</a>
             <a href="https://tanicha.github.io/explore-california/" target="_blank">Explore California</a>
+            <a href="https://tanicha.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="https://github.com/tanicha" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/tani-cha/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
