added guess the number

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://tanicha.github.io/stylin-with-css/" target="_blank">Stylin' with CSS</a>
             <a href="https://tanicha.github.io/explore-california/" target="_blank">Explore California</a>
             <a href="https://tanicha.github.io/daily-grind/" target="_blank">Daily Grind</a>
+            <a href="https://tanicha.github.io/guess-the-number/" target="_blank">Guess the Number</a>
             <a href="https://github.com/tanicha" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/tani-cha/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
