added data processing

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Tani Cha's IT116 Portal</title>
+     <title>Tani Cha's Portal</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/portal.css" />
@@ -9,14 +9,15 @@
  </head>
  <body>
      <header>
-     <h1>Tani Cha's IT116 Portal</h1>
+     <h1>Tani Cha's Portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://tanicha.github.io/data-processing/" target="_blank">Data Processing</a>
+            <a href="https://tanicha.github.io/guess-the-number/" target="_blank">Guess the Number</a>
+            <a href="https://tanicha.github.io/daily-grind/" target="_blank">Daily Grind</a>
             <a href="https://tanicha.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="https://tanicha.github.io/stylin-with-css/" target="_blank">Stylin' with CSS</a>
             <a href="https://tanicha.github.io/explore-california/" target="_blank">Explore California</a>
-            <a href="https://tanicha.github.io/daily-grind/" target="_blank">Daily Grind</a>
-            <a href="https://tanicha.github.io/guess-the-number/" target="_blank">Guess the Number</a>
             <a href="https://github.com/tanicha" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/tani-cha/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
