--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <h1>Tani Cha's Portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://tanicha.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://tanicha.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="https://tanicha.github.io/guess-the-number/" target="_blank">Guess the Number</a>
             <a href="https://tanicha.github.io/daily-grind/" target="_blank">Daily Grind</a>
