--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <h1>Tani Cha's Portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://ajax-pet-adoption.tanic.repl.co/index.php" target="_blank">AJAX Pet Adoption Agency</a>
             <a href="https://tanicha.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://tanicha.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://tanicha.github.io/data-processing/" target="_blank">Data Processing</a>
@@ -36,7 +37,7 @@
         <p>
             I am 19 years old. I recently just graduated from high 
             school and community college with both my diploma and my Associates of Arts degree. 
-            Currently, I am in a program called Year Up which is a 6 month training program that specializes 
+            Currently, I am in a program called Year Up, which is a 6 month training program that specializes 
             in preparing young adults for their future careers consisting of jobs in the technical and business 
             field. 
         </p>
