added web service

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <h1>Tani Cha's Portal</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://web-services.tanic.repl.co/" target="_blank">Web Service</a>
             <a href="https://ajax-pet-adoption.tanic.repl.co/index.php" target="_blank">AJAX Pet Adoption Agency</a>
             <a href="https://tanicha.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://tanicha.github.io/dom-play/" target="_blank">DOM Play</a>
